docs: atualização do index.html, inserindo as imagens.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <h1>🐄 CanaãLeite: Gestão Inteligente para Pecuária Leiteira</h1>
 
-    <img src="app/src/main/res/mipmap-xxxhdpi/ic_launcher_sem_texto.png" alt="Logo do App" class="main-logo">
+    <img src="docs/images/ic_launcher_legacy_square.png" alt="Logo do App" class="main-logo">
 
     <p>O <strong>CanaaLeite</strong> é um aplicativo Android nativo, desenvolvido em Kotlin, que revoluciona a gestão de fazendas de gado de leite. Ele atua como um assistente completo para o produtor rural, integrando controles de rebanho, produção, finanças e o ciclo reprodutivo em uma única plataforma poderosa e fácil de usar.</p>
 
@@ -217,7 +217,7 @@
             <img src="docs/images/profile.jpg" width="100px" alt="Foto de Danillo Teles"/>
         </a>
         <br>
-        <b>Danillo Teles</b>
+        <b>Danillo Teles Carneiro</b>
         <br>
         <a href="https://www.linkedin.com/in/danilloteles/" target="_blank">
             <img src="https://img.shields.io/badge/LinkedIn-Danillo%20Teles-blue?style=for-the-badge&logo=linkedin" alt="LinkedIn Badge"/>
