style: organização no texto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CanaãLeite: Gestão Inteligente para Pecuária Leiteira</title>
+    <title>CanaaLeite: Gestão Inteligente para Pecuária Leiteira</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
@@ -77,17 +77,17 @@
 </head>
 <body>
 
-    <h1>🐄 CanaãLeite: Gestão Inteligente para Pecuária Leiteira</h1>
+    <h1>🐄 CanaaLeite: Gestão Inteligente para Pecuária Leiteira</h1>
 
     <img src="docs/images/ic_launcher_legacy_square.png" alt="Logo do App" class="main-logo">
 
-    <p>O <strong>CanaaLeite</strong> é um aplicativo Android nativo, desenvolvido em Kotlin, que revoluciona a gestão de fazendas de gado de leite. Ele atua como um assistente completo para o produtor rural, integrando controles de rebanho, produção, finanças e o ciclo reprodutivo em uma única plataforma poderosa e fácil de usar.</p>
+    <p>O <strong>CanaaLeite</strong> é um aplicativo Android nativo, desenvolvido em Kotlin, que revoluciona a gestão de pequenos e médios criadores de gado de leiteiro. Ele atua como um assistente completo para o produtor rural, integrando controles de rebanho, produção, finanças e o ciclo reprodutivo em uma única plataforma poderosa e fácil de usar.</p>
 
-    <h2>✨ O Que Torna o CanaãLeite Inovador?</h2>
+    <h2>✨ O Que Torna o CanaaLeite Inovador?</h2>
     <p>O grande diferencial do CanaaLeite é funcionar como um <strong>consultor veterinário virtual</strong> para o produtor que não tem acesso constante a um profissional. O app guia o usuário através do complexo ciclo reprodutivo das vacas, com o objetivo de alcançar a meta ideal de um bezerro por vaca por ano.</p>
     <ul>
         <li><strong>Diagnóstico de Prenhez sem Veterinário:</strong> O sistema utiliza um método inovador baseado na observação do ciclo estral (cio). Ele alerta o produtor para verificar a ausência de cio em 21 e 42 dias após a cobertura, permitindo uma confirmação de prenhez com alta probabilidade, sem a necessidade de exames caros ou da presença de um veterinário.</li>
-        <li><strong>Sistema de Alertas Proativo:</strong> O app gera um mural de alertas inteligentes e coloridos (🟢 <strong>Hoje</strong>, 🟡 <strong>Próximos</strong>, 🔴 <strong>Atrasados</strong>) para todas as tarefas críticas do ciclo reprodutivo, como previsão de cio, data de secagem e previsão de parto.</li>
+        <li><strong>Sistema de Alertas Proativo:</strong> O app gera um mural de alertas inteligentes para todas as tarefas críticas do ciclo reprodutivo, como previsão de cio, data de secagem e previsão de parto.</li>
         <li><strong>Gestão 360° da Fazenda:</strong> Além do controle reprodutivo, o CanaaLeite integra:
             <ul>
                 <li><strong>Controle Financeiro:</strong> Gerencie despesas e receitas com dashboards visuais.</li>
